--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: forge fmt --check
 
       - name: Check contract sizes
-        run: forge build --sizes --skip script
+        run: forge build --via-ir --sizes --skip script
         # Replace the above line with the below if using pre-compiled ir-optimized contracts
         # run: FOUNDRY_PROFILE=optimized forge build --sizes --skip script
 
