--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,7 @@
 	url = https://github.com/foundry-rs/forge-std
 [submodule "lib/hats-module"]
 	path = lib/hats-module
-	url = https://github.com/Hats-Protocol/hats-module
+	url = https://github.com/hats-protocol/hats-module
+[submodule "lib/solady"]
+	path = lib/solady
+	url = https://github.com/vectorized/solady
