--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
+[submodule "lib/hats-module"]
+	path = lib/hats-module
+	url = https://github.com/alexkeating/hats-module
